<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"

            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_edit_text"
                android:hint="@string/first_name_hint"
                android:backgroundTint="@color/edit_text_background"
                android:textColor="@color/black_font"
                android:textColorHint="@color/edit_text_hint"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="16dp"
                android:layout_margin="8dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_edit_text"
                android:backgroundTint="@color/edit_text_background"
                android:textColor="@color/black_font"
                android:textColorHint="@color/edit_text_hint"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/last_name_hint"
                android:layout_margin="8dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mail_edit_text"
                android:backgroundTint="@color/edit_text_background"
                android:textColor="@color/black_font"
                android:textColorHint="@color/edit_text_hint"
                android:hint="@string/email_address_hint"
                android:inputType="text"
                android:maxLines="1"
                android:layout_margin="8dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_edit_text"
                android:backgroundTint="@color/edit_text_background"
                android:textColor="@color/black_font"
                android:textColorHint="@color/edit_text_hint"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:maxLines="1"
                android:layout_margin="8dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_edit_text"
                android:backgroundTint="@color/edit_text_background"
                android:textColor="@color/black_font"
                android:textColorHint="@color/edit_text_hint"
                android:hint="@string/confirm_password_hint"
                android:inputType="text"
                android:maxLines="1"
                android:layout_margin="8dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signUpButton"
                android:text="@string/sign_up_hint"
                android:background="@drawable/round_button"
                android:textColor="@color/white_font_text"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/haveAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_account"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:layout_gravity="center|top"
            android:visibility="gone"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_marginTop="32dp"
            android:max="100" />
    </FrameLayout>


</layout>